--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-discord.py==2.3.2 
-mysql-connector==2.2.9 
+bs4
+moviepy
+spotipy 
+tabulate 
+langdetect
+dotenv-python
+beautifulsoup4
+discord-ext-menus
+
+httpx==0.23.2
 openai==1.6.1
 pandas==2.1.4 
-requests==2.31.0 
+psutil0==5.9.8
 asyncio==3.4.3
+colorama==0.4.6
+requests==2.31.0 
+discord.py==2.3.2 
+mysql-connector==2.2.9  
