Update code: Fixed restart command and updated log channel ID

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "nodemonConfig": { 
     "events": {  
-      "restart": " cls"
+      "restart": " cls, delay 1000, nodemon momo.py"
     }
   },    
   "type": "module",  
